--- a/ApiMarvel/package.json
+++ b/ApiMarvel/package.json
@@ -11,6 +11,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.3"
+    "nuxt": "^3.7.3",
+    "vuetify-nuxt-module": "^0.5.12"
+  },
+  "dependencies": {
+    "axios": "^1.5.0",
+    "vuetify": "^3.3.17"
   }
 }
